# BREEZE

./: CMakeLists.txt  README.md
demo/: main.cpp
include/BREEZE/: mesh.h  model.h  shader.h  shader_program.h  texture.h
shaders/: passthrough.fs  passthrough.vs  phong.fs  shadow.vs
src/: mesh.cpp  model.cpp  shader.cpp  shader_program.cpp  stb_image.cpp  texture.cpp
